[API-686] Moved word wrap fix from specific class to generic word-wrap class

--- a/assets/scss/base/_helpers.scss
+++ b/assets/scss/base/_helpers.scss
@@ -160,6 +160,7 @@
 .word-wrap {
   white-space: pre-line;
   word-wrap: break-word;
+  word-break: break-all;
 }
 
 /**
