--- a/assets/scss/modules/_code.scss
+++ b/assets/scss/modules/_code.scss
@@ -13,7 +13,6 @@ pre.snippet--block {
 
 .snippet--inline {
   font-family: Consolas, Monaco, "Andale Mono", "Ubuntu Mono", monospace;
-  word-break: break-all;
 }
 
 code.snippet--inline { 
